--- a/.github/workflows/translate.yml
+++ b/.github/workflows/translate.yml
@@ -50,6 +50,8 @@ jobs:
                 file_url="${repo_url}/${head_sha}/${file}"
                 echo "Calling the Translation API for $file_url"
                 payload=$(jq -n --arg url "$file_url" --arg target "${languages[$lang_short]}" '{"source": "english", "target": $target, "content_url": $url}')
+                echo $payload
+                echo $TRANSLATION_API_URL
                 response=$(curl -s -X POST "$TRANSLATION_API_URL" -d "$payload" -H "Content-Type: application/json" -H "Authorization: Bearer ${{ secrets.TRANSLATION_API_KEY }}")
                 if [ $? -ne 0 ]; then
                   echo "Error calling Translation API"
@@ -90,4 +92,3 @@ jobs:
           title: "Localize PR-${{ github.event.pull_request.number }}"
           body: "This PR applies localization for files updated in the PR #${{ github.event.pull_request.number }}."
           branch: main
-          
