--- a/.github/workflows/translate.yml
+++ b/.github/workflows/translate.yml
@@ -5,10 +5,6 @@ on:
     types:
       - closed
 
-permissions:
-  contents: write
-  pull-requests: write
-
 jobs:
   translate_docs:
     runs-on: ubuntu-latest
@@ -21,16 +17,14 @@ jobs:
           ref: ${{ github.event.pull_request.head.ref }}
 
       - name: Get list of changed files
-        id: changed-files
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           pr_number=${{ github.event.pull_request.number }}
           files=$(gh pr view $pr_number --json files --jq '.files[].path')
           echo "files=$files" >> $GITHUB_ENV
-        env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Create new branch
-        id: create-branch
         run: |
           git config --global user.name "docs-localization[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
@@ -82,6 +76,8 @@ jobs:
           done
 
       - name: Commit and push changes
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           pr_number=${{ github.event.pull_request.number }}
           git add .
@@ -89,9 +85,12 @@ jobs:
           git push origin ${{ env.new_branch }}
 
       - name: Create a pull request
-        uses: peter-evans/create-pull-request@v6
-        with:
-          base: ${{ env.new_branch }}
-          title: "Localize PR-${{ github.event.pull_request.number }}"
-          body: "This PR applies localization for files updated in the PR #${{ github.event.pull_request.number }}."
-          branch: main
+        env:
+          GITHUB_TOKEN: ${{ secrets.PAT_TOKEN }}
+        run: |
+          pr_number=${{ github.event.pull_request.number }}
+          gh pr create \
+            --title "Localize PR-${pr_number}" \
+            --body "This PR applies localization for files updated in the PR #${pr_number}." \
+            --head ${{ env.new_branch }} \
+            --base main
