--- a/.github/workflows/translate.yml
+++ b/.github/workflows/translate.yml
@@ -10,6 +10,9 @@ jobs:
     runs-on: ubuntu-latest
     if: github.event.pull_request.merged == true && github.event.pull_request.base.ref == github.event.repository.default_branch
 
+    permissions:
+      contents: write
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
@@ -86,7 +89,7 @@ jobs:
 
       - name: Create a pull request
         env:
-          GITHUB_TOKEN: ${{ secrets.PAT_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           pr_number=${{ github.event.pull_request.number }}
           gh pr create \
