--- a/.github/workflows/translate.yml
+++ b/.github/workflows/translate.yml
@@ -53,7 +53,7 @@ jobs:
                 payload=$(jq -n --arg url "$file_url" --arg target "${languages[$lang_short]}" '{"source": "english", "target": $target, "source_url": $url}')
                 echo $payload
                 echo $TRANSLATION_API_URL
-                response = $(curl -X POST -H "X-API-KEY: ${{ secrets.TRANSLATION_API_KEY }}" -H "Content-Type: application/json" -d '"$payload"' "$TRANSLATION_API_URL")
+                response = $(curl -X POST -H "X-API-KEY: ${{ secrets.TRANSLATION_API_KEY }}" -H "Content-Type: application/json" -d "$payload" "$TRANSLATION_API_URL")
                 echo $response
                 if [ $? -ne 0 ]; then
                   echo "Error calling Translation API"
