--- a/.github/workflows/translate.yml
+++ b/.github/workflows/translate.yml
@@ -52,12 +52,10 @@ jobs:
                 file_url="${repo_url}/${head_sha}/${file}"
                 echo "Calling the Translation API for $file_url"
                 payload=$(jq -n --arg url "$file_url" --arg target "${languages[$lang_short]}" '{"source": "english", "target": $target, "source_url": $url}')
-                echo $payload
-                echo $TRANSLATION_API_URL
                 response = $(curl -s -X POST "$TRANSLATION_API_URL" \
                             -H "Content-Type: application/json" \
                             -H "X-API-KEY: $TRANSLATION_API_KEY" \
-                            -d "$payload")
+                            -d '$payload')
                 echo $response
                 if [ $? -ne 0 ]; then
                   echo "Error calling Translation API"
