--- a/.github/workflows/translate.yml
+++ b/.github/workflows/translate.yml
@@ -52,7 +52,6 @@ jobs:
                 file_url="${repo_url}/${head_sha}/${file}"
                 echo "Calling the Translation API for $file_url"
                 payload=$(jq -n --arg url "$file_url" --arg target "${languages[$lang_short]}" '{"source": "english", "target": $target, "source_url": $url}')
-                echo '$payload'
                 response=$(curl -s -X POST "$TRANSLATION_API_URL" \
                             -H "Content-Type: application/json" \
                             -H "X-API-KEY: $TRANSLATION_API_KEY" \
@@ -63,7 +62,7 @@ jobs:
                   echo "Error calling Translation API"
                   continue
                 fi
-                translated_content=$(echo $response | jq -r '.response.translated_document')
+                translated_content="Test message"
                 if [ -z "$translated_content" ]; then
                   echo "Translation API returned empty content for $file_url"
                   continue
